; ModuleID = '/home/carl/AnghaBench/git/extr_remote.c_remote_for_branch.c'
source_filename = "/home/carl/AnghaBench/git/extr_remote.c_remote_for_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.branch = type { i8* }

@.str = private unnamed_addr constant [7 x i8] c"origin\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @remote_for_branch(%struct.branch* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.branch*, align 8
  %5 = alloca i32*, align 8
  store %struct.branch* %0, %struct.branch** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load %struct.branch*, %struct.branch** %4, align 8
  %7 = icmp ne %struct.branch* %6, null
  br i1 %7, label %8, label %22

8:                                                ; preds = %2
  %9 = load %struct.branch*, %struct.branch** %4, align 8
  %10 = getelementptr inbounds %struct.branch, %struct.branch* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %22

13:                                               ; preds = %8
  %14 = load i32*, i32** %5, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %13
  %17 = load i32*, i32** %5, align 8
  store i32 1, i32* %17, align 4
  br label %18

18:                                               ; preds = %16, %13
  %19 = load %struct.branch*, %struct.branch** %4, align 8
  %20 = getelementptr inbounds %struct.branch, %struct.branch* %19, i32 0, i32 0
  %21 = load i8*, i8** %20, align 8
  store i8* %21, i8** %3, align 8
  br label %28

22:                                               ; preds = %8, %2
  %23 = load i32*, i32** %5, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %27

25:                                               ; preds = %22
  %26 = load i32*, i32** %5, align 8
  store i32 0, i32* %26, align 4
  br label %27

27:                                               ; preds = %25, %22
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %28

28:                                               ; preds = %27, %18
  %29 = load i8*, i8** %3, align 8
  ret i8* %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
